Bug 88350 - [Bisected]Rendercheck mcoords fails
Summary: [Bisected]Rendercheck mcoords fails
Status: VERIFIED FIXED
Alias: None
Product: xorg
Classification: Unclassified
Component: Driver/intel (show other bugs)
Version: unspecified
Hardware: All Linux (All)
: high normal
Assignee: Chris Wilson
QA Contact: Intel GFX Bugs mailing list
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2015-01-13 03:01 UTC by lu hua
Modified: 2015-01-16 06:34 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments

Description lu hua 2015-01-13 03:01:13 UTC
System Environment:
--------------------------
Platform: Ironlake
Libdrm:		(master)libdrm-2.4.58-21-gd7c0a08bc576deb07df6c3f91f393ca8edd0c4bf
Mesa:		(10.4)fffe533f08d7c0cc61841195216e54587a1b77ad
Xserver:	(server-1.16-branch)xorg-server-1.16.3-1-gf39ac527baab8a38d023e3a8416757ccfcead42a
Xf86_video_intel:(master)2.99.917-26-gee79d1885509a2a94acb80e0c416cb276ba7c453
Libva:		(master)e97ac9e78cd475a13e722c455e34d5d39d0f059d
Libva_intel_driver:(master)1a4e98338b8b498895eabe3a151f48e5c624bb63
Kernel:   (drm-intel-fixes)e3e6efcd638d3caa18d9e89f235c7d6fc32c1f0b

Bug detailed description:
-----------------------------
It fails on all platforms, It's xf86_video_intel regression.
mcoords also fails.

Bisect shows: e53087e48b5a9fe795be120ca72e465ca470ccc9 is the first bad commit.
commit e53087e48b5a9fe795be120ca72e465ca470ccc9
Author:     Chris Wilson <chris@chris-wilson.co.uk>
AuthorDate: Thu Jan 8 14:27:35 2015 +0000
Commit:     Chris Wilson <chris@chris-wilson.co.uk>
CommitDate: Thu Jan 8 16:44:28 2015 +0000

    sna: Allow use of mmap(wc) for inplace GetImage

    Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>


output:
rendercheck 1.4
Render extension version 0.11
Window format: r8g8b8
Found server-supported format: a8
Found server-supported format: a8r8g8b8
Found server-supported format: x8r8g8b8
Found server-supported format: b8g8r8a8
Found server-supported format: b8g8r8x8
Found server-supported format: r8g8b8
Found server-supported format: b8g8r8
Found server-supported format: r5g5b5
Found server-supported format: b5g5r5
Found server-supported format: x1r5g5b5
Found server-supported format: x1b5g5r5
Found server-supported format: r5g6b5
Found server-supported format: b5g6r5
Found server-supported format: x8b8g8r8
Found server-supported format: x2r10g10b10
Found server-supported format: x2b10g10r10
Beginning mask coords test
mask coords test error of 255.0000 at (1, 1) --
           R     G     B     A
got:       1.000 0.000 0.000 1.000
expected:  1.000 1.000 1.000 1.000
mask coords test error of 255.0000 at (3, 1) --
           R     G     B     A
got:       1.000 0.000 0.000 1.000
expected:  1.000 1.000 1.000 1.000
mask coords test error of 255.0000 at (1, 2) --
           R     G     B     A
got:       1.000 0.000 0.000 1.000
expected:  1.000 1.000 1.000 1.000
mask coords test error of 255.0000 at (3, 2) --
           R     G     B     A
got:       1.000 0.000 0.000 1.000
expected:  1.000 1.000 1.000 1.000
mask coords test error of 255.0000 at (1, 3) --
           R     G     B     A
got:       1.000 0.000 0.000 1.000
expected:  1.000 1.000 1.000 1.000
mask coords test error of 255.0000 at (2, 3) --
           R     G     B     A
got:       1.000 0.000 0.000 1.000
expected:  1.000 1.000 1.000 1.000
expected vs tested:
11111 11111
10101 11111
10101 11111
10011 11111
11111 11111
0 tests passed of 1 total
Successful Groups:


Reproduce steps:
----------------------------
1. xinit
2. ./rendercheck -o src,over,overreverse,xor -t mcoords
Comment 1 Chris Wilson 2015-01-13 09:11:39 UTC
I've tested on ivb with -nightly and 3e6efcd638d3c kernels. It passes.
Comment 2 Chris Wilson 2015-01-13 12:17:10 UTC
Also tested on pnv, no failures.
Comment 3 lu hua 2015-01-14 07:19:57 UTC
I retest it on ILK/IVB/BYT.
It works well on IVB.
It fails on ILK/BYT with drm-intel-fixes kernel, works well on drm-intel-nightly kernel.
Comment 4 Chris Wilson 2015-01-14 11:54:46 UTC
Ok, byt did fail...

commit e7ef57ce1f450aabe87c36488e04e2f874d7af47
Author: Chris Wilson <chris@chris-wilson.co.uk>
Date:   Wed Jan 14 11:52:31 2015 +0000

    sna: Actually check for has_wc_mmap before use
    
    The callers assumed that the callee was doing the check and vice versa.
    The result was that no did and we ended up using an incoherent mapping
    instead on old kernels.
    
    Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=88350
    Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>
Comment 5 lu hua 2015-01-16 06:34:01 UTC
Verified.Fixed.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.