sna: Actually check for has_wc_mmap before use

The callers assumed that the callee was doing the check and vice versa.
The result was that no did and we ended up using an incoherent mapping
instead on old kernels.

Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=88350
Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>